Fix recipe and guide fetch services and moderator dashboard connectivity by removing authentication from public GET endpoints and updating service handlers. altered the menu items to show the guides and recipes for the mods as well.